src/objects/Retos_Contacto__c.object
<CustomObject>
    <fields>
        <fullName>Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reto Contactos</relationshipLabel>
        <relationshipName>Reto_Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nivel_de_Relaci_n__c</fullName>
        <label>Nivel de Relación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fluida y Constante</fullName>
                </value>
                <value>
                    <fullName>Ocasional pero Cordial</fullName>
                </value>
                <value>
                    <fullName>Intensa y Difícil</fullName>
                </value>
                <value>
                    <fullName>No lo conozco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otro_contacto_del_cliente__c</fullName>
        <label>Otro contacto del cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reto__c</fullName>
        <label>Reto</label>
        <referenceTo>Reto__c</referenceTo>
        <relationshipLabel>Reto Contactos</relationshipLabel>
        <relationshipName>Reto_Contactos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Contacto__c</fullName>
        <label>Tipo de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Director de RRHH</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Director de Compras</fullName>
                </value>
                <value>
                    <fullName>Director de Negocio</fullName>
                </value>
                <value>
                    <fullName>CISO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reto Contacto</label>
    <nameField>
        <label>Nombre de Retos Contacto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reto Contactos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>